add security schema.
